[project]
name = "llm-ark"
version = "0.1.0"
description = "Access volcengine.com models via API"
readme = "README.md"
authors = [{name = "trswnca"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "llm"
]

[project.urls]
Homepage = "https://github.com/trswnca/llm-ark"
Changelog = "https://github.com/trswnca/llm-ark/releases"
Issues = "https://github.com/trswnca/llm-ark/issues"

[project.entry-points.llm]
ark = "llm_ark"

[project.optional-dependencies]
test = ["pytest"]
